--- a/src/assets/scss/blocks/footer.scss
+++ b/src/assets/scss/blocks/footer.scss
@@ -23,12 +23,10 @@
 }
 
 .footer__user  {
-
   margin-top: 2rem;
-
   li {
+    display: flex;
     margin-bottom: 1rem;
-
     &:last-child {
       margin-bottom: 0;
     }
@@ -38,36 +36,60 @@
 .footer__link {
   display: flex;
   align-items: center;
-
   color: $primary;
   text-decoration: none;
   font-weight: 600;
 
-  &.footer__link:before {
-    content: '';
-    display: block;
-    margin-right: 1.5rem;
-
-    width: 1rem;
-    height: 1rem;
-
-    border-radius: 2px;
+  &:hover {
+    opacity: $opacity;
   }
 }
 
 .ft-group-13:before {
+  content: '';
+  display: block;
+  margin-right: 1.5rem;
+
+  width: 1rem;
+  height: 1rem;
+
+  border-radius: 2px;
   background: $group-13;
 }
 
 .ft-group-10:before {
+  content: '';
+  display: block;
+  margin-right: 1.5rem;
+
+  width: 1rem;
+  height: 1rem;
+
+  border-radius: 2px;
   background: $group-10;
 }
 
 .ft-group-7:before {
+  content: '';
+  display: block;
+  margin-right: 1.5rem;
+
+  width: 1rem;
+  height: 1rem;
+
+  border-radius: 2px;
   background: $group-7;
 }
 
 .ft-group-4:before {
+  content: '';
+  display: block;
+  margin-right: 1.5rem;
+
+  width: 1rem;
+  height: 1rem;
+
+  border-radius: 2px;
   background: $group-4;
 }
 
@@ -75,40 +97,6 @@
   font-weight: 700;
   font-size: 2rem;
   color: $primary;
-}
-
-.footer__devider {
-  position: relative;
-  width: 90px;
-  height: 3px;
-  margin-top: 26px;
-  margin-bottom: 30px;
-
-  &:after, &:before {
-    position: absolute;
-    content: '';
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 30px;
-    background-color: #6c5ce7;
-  }
-}
-
-.footer .footer-item .footer__divider:after {
-  right: 12px;
-  width: 8px;
-}
-
-.footer__devider:after {
-  right: 25px;
-  left: auto;
-  background-color: #fff;
-  width: 10px;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
 }
 
 .footer__inner {
@@ -122,8 +110,6 @@
     margin-bottom: 0;
   }
 }
-
-
 
 .footer__address, .footer__mail {
   font-size: 1.8rem;
