--- a/src/assets/scss/blocks/social.scss
+++ b/src/assets/scss/blocks/social.scss
@@ -13,7 +13,7 @@
 
   line-height: 100%;
   font-size: 3.2rem;
-  font-family: 'Font Awesome 5 Free', "Font Awesome 5 Brands";
+  font-family: 'Font Awesome 5 Free', 'Font Awesome 5 Brands';
 
   &.vk {
     margin-right: 2rem;
