--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -22,19 +22,18 @@
             <div class="col-md-3">
                 <div class="footer__item">
                     <h1 class="footer__title">Обучение</h1>
-<!--                    <div class="footer__devider"></div>-->
                     <ul class="footer__user">
                         <li>
-                            <a class="footer__link ft-group-13" href="">13+</a>
+                            <a class="footer__link ft-group-13" href="#">13+</a>
                         </li>
                         <li>
-                            <a class="footer__link ft-group-10" href="">10+</a>
+                            <a class="footer__link ft-group-10" href="#">10+</a>
                         </li>
                         <li>
-                            <a class="footer__link ft-group-7" href="">7+</a>
+                            <a class="footer__link ft-group-7" href="#">7+</a>
                         </li>
                         <li>
-                            <a class="footer__link ft-group-4" href="">4+</a>
+                            <a class="footer__link ft-group-4" href="#">4+</a>
                         </li>
                     </ul>
                 </div>
@@ -42,7 +41,6 @@
             <div class="col-md-3">
                 <div class="footer__item">
                     <h1 class="footer__title">Курсы</h1>
-<!--                    <div class="footer__devider"></div>-->
                     <ul class="footer__user">
                         <li>
                             <a class="footer__link" href="">Скетчинг</a>
@@ -59,7 +57,6 @@
             <div class="col-md-3">
                 <div class="footer__item">
                     <h1 class="footer__title">Арт-студия</h1>
-<!--                    <div class="footer__devider"></div>-->
                     <ul class="footer__user">
                         <li>
                             <a class="footer__link" href="">О студии</a>
