--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,8 +3,11 @@
         <div class="header__item">
             <div class="header__logo nav__item">
                 <a href="#" class="nav__link logo">
-                    <span class="logo__top">Арт-студия</span>
-                    <p class="logo__bottom">Расписной малюр</p>
+                    <i class="fas fa-dove"></i>
+                    <span class="">
+                        <span class="logo__top">Арт-студия</span>
+                        <p class="logo__bottom">Расписной малюр</p>
+                    </span>
                 </a>
             </div>
             <div class="header__nav">
