--- a/src/assets/scss/blocks/location.scss
+++ b/src/assets/scss/blocks/location.scss
@@ -1,13 +1,12 @@
 .location .row {
-  //padding: 6.4rem 0;
-  //margin-bottom: 2rem;
-  //min-height:600px;
+  //padding: 2rem 0;
+  margin-bottom: 6rem;
 
   display: flex;
   justify-content: center;
   align-items: center;
 
-  min-height: 600px;
+  //min-height: 600px;
 }
 
 .location__title {
@@ -48,4 +47,9 @@
     font-weight: 600;
     font-family: 'Font Awesome 5 Free', "Font Awesome 5 Brands";
   }
+}
+
+.location__img {
+  display: block;
+  margin: 0 auto;
 }
