--- a/src/assets/scss/blocks/intro.scss
+++ b/src/assets/scss/blocks/intro.scss
@@ -9,6 +9,12 @@
 
   height: 100vh;
   min-height: 600px;
+  max-height: 1000px;
+}
+
+.intro__img {
+  display: block;
+  margin: 0 auto;
 }
 
 .intro__badge {
