--- a/src/assets/scss/blocks/teacher.scss
+++ b/src/assets/scss/blocks/teacher.scss
@@ -1,13 +1,17 @@
 .teacher .row{
-  //padding: 6.4rem 0;
-  //margin-bottom: 2rem;
-  //min-height:600px;
+  //padding: 2rem 0;
+  margin-bottom: 8rem;
 
   display: flex;
   justify-content: center;
   align-items: center;
 
-  min-height: 600px;
+  //min-height: 600px;
+}
+
+.teacher__img {
+  display: block;
+  margin: 0 auto;
 }
 
 .teacher__title {
