--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,19 +4,21 @@
         <div class="row">
             <div class="col-lg-3 col-sm-6">
                 <div class="footer__item">
-                    <div class="footer__inner">
-                        <a class="footer__address" href="#">Октябрьский проспект, 50к1, cтудия №206, 2 этаж</a>
-                    </div>
-                    <div class="footer__inner"><a class="footer__phone" href="#">+7(953)244-20-70</a></div>
-                    <div class="footer__inner"><a class="footer__mail" href="#">rasmalur@gmail.com</a></div>
-                    <div class="footer__inner">
-                        <div class="footer__social">
-                            <div class="item">
-                                <a class="link vk" href="#"></a>
-                                <a class="link inst" href="#"></a>
-                            </div>
-                        </div>
-                    </div>
+                    <ul class="footer__user" style="margin: 0">
+                        <li>
+                            <a class="footer__link footer__address" href="#">Октябрьский проспект, 50к1, cтудия №206, 2 этаж</a>
+                        </li>
+                        <li>
+                            <a class="footer__link footer__phone" href="#">+7(953)244-20-70</a>
+                        </li>
+                        <li>
+                            <a class="footer__link footer__mail" href="#">rasmalur@gmail.com</a>
+                        </li>
+                        <li class="footer__social">
+                            <a class="footer__link vk" href="#"></a>
+                            <a class="footer__link inst" href="#"></a>
+                        </li>
+                    </ul>
                 </div>
             </div>
             <div class="col-md-3">
@@ -67,7 +69,17 @@
                         <li>
                             <a class="footer__link" href="">Сотрудничество</a>
                         </li>
+                        <li>
+                            <a class="footer__link" href="">Политика</a>
+                        </li>
                     </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="footer__sub">
+                    <p>Псков © Арт-студия "Расписной малюр", 2017-2021</p>
                 </div>
             </div>
         </div>
