--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -42,5 +42,8 @@ body {
 @import "blocks/action";
 @import "blocks/footer";
 
+@import "blocks/benefits";
+@import "blocks/program";
+
 @import "blocks/social";
 @import "blocks/btn";
