--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -70,7 +70,7 @@
                             <a class="footer__link" href="">Сотрудничество</a>
                         </li>
                         <li>
-                            <a class="footer__link" href="">Политика</a>
+                            <a class="footer__link" href="">Пользовательское соглашение</a>
                         </li>
                     </ul>
                 </div>
