--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -44,6 +44,8 @@ body {
 
 @import "blocks/benefits";
 @import "blocks/program";
+@import "blocks/gear";
 
+@import "blocks/navscroll";
 @import "blocks/social";
 @import "blocks/btn";
