--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,6 +2,9 @@
 <!--    <svg class="footer-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"> <path fill-opacity="1" d="M0,64L17.1,64C34.3,64,69,64,103,53.3C137.1,43,171,21,206,21.3C240,21,274,43,309,53.3C342.9,64,377,64,411,85.3C445.7,107,480,149,514,154.7C548.6,160,583,128,617,144C651.4,160,686,224,720,213.3C754.3,203,789,117,823,117.3C857.1,117,891,203,926,218.7C960,235,994,181,1029,149.3C1062.9,117,1097,107,1131,101.3C1165.7,96,1200,96,1234,96C1268.6,96,1303,96,1337,80C1371.4,64,1406,32,1423,16L1440,0L1440,320L1422.9,320C1405.7,320,1371,320,1337,320C1302.9,320,1269,320,1234,320C1200,320,1166,320,1131,320C1097.1,320,1063,320,1029,320C994.3,320,960,320,926,320C891.4,320,857,320,823,320C788.6,320,754,320,720,320C685.7,320,651,320,617,320C582.9,320,549,320,514,320C480,320,446,320,411,320C377.1,320,343,320,309,320C274.3,320,240,320,206,320C171.4,320,137,320,103,320C68.6,320,34,320,17,320L0,320Z"></path> </svg>-->
     <div class="container">
         <div class="row">
+            <div class="col-12 mb-5">
+<!--                <div class="footer__title"><span style="font-size: 1.6rem;">Арт-студия</span><br>"Расписной малюр"</div>-->
+            </div>
             <div class="col-lg-3 col-sm-6">
                 <div class="footer__item">
                     <ul class="footer__user" style="margin: 0">
@@ -69,9 +72,12 @@
                         <li>
                             <a class="footer__link" href="">Сотрудничество</a>
                         </li>
-                        <li>
-                            <a class="footer__link" href="">Пользовательское соглашение</a>
-                        </li>
+<!--                        <li>-->
+<!--                            <a class="footer__link" href="">Пользовательское соглашение</a>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <a class="footer__link" href="">Политика конфиденциальности</a>-->
+<!--                        </li>-->
                     </ul>
                 </div>
             </div>
